--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -27,18 +27,6 @@ steps:
   name: "gcr.io/cloud-builders/docker"
   args: ["push", "${_IMAGE_URI}"]
 
-- id: "Create the CustomJobSpec YAML file for the Vertex AI Training Job"
-  name: gcr.io/cloud-builders/curl
-  entrypoint: /bin/bash
-  args:
-    - -c 
-    - |
-      # TODO maybe move args out of custom-jobs create command and move into here
-      cat << EOF > /workspace/custom_job_spec.yml
-      baseOutputDirectory:
-        outputUriPrefix: "${_GCS_MODEL_DIRECTORY}"
-      EOF
-
 - id: "Write a python util to parse gcloud data"
   name: "gcr.io/cloud-builders/curl"
   entrypoint: /bin/bash
@@ -79,6 +67,31 @@ steps:
 
         print(get_id_by_display_name(obj, args.display_name), end='')
       EOF
+
+- id: "Create the CustomJobSpec YAML file for the Vertex AI Training Job"
+  name: gcr.io/cloud-builders/curl
+  entrypoint: /bin/bash
+  args:
+    - -c 
+    - |
+      # TODO maybe move args out of custom-jobs create command and move into here
+      cat << EOF > /workspace/custom_job_spec.yml
+      baseOutputDirectory:
+        outputUriPrefix: "${_GCS_MODEL_DIRECTORY}"
+      workerPoolSpecs:
+      machineSpec:
+        machineType: n2-standard-4
+      replicaCount: 1
+      containerSpec:
+        imageUri: ${_IMAGE_URI}
+        command:
+        - --model-filepath=model.joblib
+        - --report-filepath=report.json
+        - --gcp-project=${PROJECT_ID}
+        - --gcs-train-csv-path=${_GCS_TRAIN_DATA_PATH}
+        - --gcs-test-csv-path=${_GCS_TEST_DATA_PATH}
+        - --gcs-model-output-path=${_GCS_BUCKET}
+      EOF
  
 # https://cloud.google.com/sdk/gcloud/reference/ai/custom-jobs/create
 # https://cloud.google.com/vertex-ai/docs/reference/rest/v1/CustomJobSpec
@@ -93,16 +106,15 @@ steps:
       #    && gsutil cp model.joblib ${_GCS_MODEL_DIRECTORY}/model.joblib \
       #    && gsutil cp report.json ${_GCS_MODEL_DIRECTORY}/report.json" \
       gcloud ai custom-jobs create \
-        --worker-pool-spec=container-image-uri=${_IMAGE_URI},machine-type=n2-standard-4 \
         --config=/workspace/custom_job_spec.yml \
         --display-name=${_TRAINING_JOB_NAME} \
         --region=${_REGION} \
-        --command="--model-filepath=model.joblib --report-filepath=report.json --gcp-project=${PROJECT_ID} \
-          --gcs-train-csv-path=${_GCS_TRAIN_DATA_PATH} --gcs-test-csv-path=${_GCS_TEST_DATA_PATH} --gcs-model-output-path=${_GCS_BUCKET}" \
         2>&1 \
         | grep describe \
         | sed 's|.*/||' \
         > /workspace/custom_job_id
+
+        --gcs-train-csv-path, --gcs-test-csv-path
 
       echo "Waiting for job $(</workspace/custom_job_id)"
 
