--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -75,13 +75,6 @@ steps:
   args:
     - -c 
     - |
-      # command:
-      # - --model-filepath=model.joblib
-      # - --report-filepath=report.json
-      # - --gcp-project=${PROJECT_ID}
-      # - --gcs-train-csv-path=${_GCS_TRAIN_DATA_PATH}
-      # - --gcs-test-csv-path=${_GCS_TEST_DATA_PATH}
-      # - --gcs-model-output-path=${_GCS_BUCKET}
       # TODO maybe move args out of custom-jobs create command and move into here
       cat << EOF > /workspace/custom_job_spec.yml
       workerPoolSpecs:
@@ -104,6 +97,7 @@ steps:
         --config=/workspace/custom_job_spec.yml \
         --display-name=${_TRAINING_JOB_NAME} \
         --region=${_REGION} \
+        --command=--model-filepath=model.joblib,--report-filepath=report.json,--gcp-project=${PROJECT_ID},--gcs-train-csv-path=${_GCS_TRAIN_DATA_PATH},--gcs-test-csv-path=${_GCS_TEST_DATA_PATH},--gcs-model-output-path=${_GCS_BUCKET} \
         2>&1 \
         | grep describe \
         | sed 's|.*/||' \
