fixing VAI custom job args

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -83,6 +83,13 @@ steps:
         replicaCount: 1
         containerSpec:
           imageUri: ${_IMAGE_URI}
+          args:
+          - --model-filepath=model.joblib
+          - --report-filepath=report.json
+          - --gcp-project=${PROJECT_ID}
+          - --gcs-train-csv-path=${_GCS_TRAIN_DATA_PATH}
+          - --gcs-test-csv-path=${_GCS_TEST_DATA_PATH}
+          - --gcs-model-output-path=${_GCS_BUCKET} 
       EOF
  
 # https://cloud.google.com/sdk/gcloud/reference/ai/custom-jobs/create
@@ -97,7 +104,6 @@ steps:
         --config=/workspace/custom_job_spec.yml \
         --display-name=${_TRAINING_JOB_NAME} \
         --region=${_REGION} \
-        --command=--model-filepath=model.joblib,--report-filepath=report.json,--gcp-project=${PROJECT_ID},--gcs-train-csv-path=${_GCS_TRAIN_DATA_PATH},--gcs-test-csv-path=${_GCS_TEST_DATA_PATH},--gcs-model-output-path=${_GCS_BUCKET} \
         2>&1 \
         | grep describe \
         | sed 's|.*/||' \
